"Events in Town" = "Events in Town";
"Favorites" = "Favorites";
"Search" = "Search";
"Add" = "Add";
"Events" = "Events";
"Event" = "Event";
"Venue" = "Venue";
"Description" = "Description";
"City" = "City";
"Address" = "Address";
"Label" = "Label";
"Performer" = "Performer";
"Start time" = "Start time";
