...
                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <textInputTraits key="textInputTraits"/>
                            <scopeButtonTitles>
                                <string>Title</string>
                                <string>Title</string>
                            </scopeButtonTitles>
                        </searchBar>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Events" textLabel="pQz-xk-Qp4" detailTextLabel="KCG-Lm-hkB" style="IBUITableViewCellStyleSubtitle" id="HAh-dF-Jgr">
                                <rect key="frame" x="0.0" y="72" width="414" height="44"/>
...
